--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
@@ -66,14 +67,23 @@
     <section id="intro">
 
         <div class="container" style="margin-top: 15%;">
-            <button type="button" class="btn btn-success btn-sm" aria-pressed="true"
-                style="margin-left: 2%; background-color: #71F9A8; color: black;">Software Developer</button>
+
+            <!--Role Button-->
+            <button type="button" class="btn btn-success btn-sm" aria-pressed="true"style="margin-left: 2%;">
+                Software Developer
+            </button>
+
             <div class="row-align-item-start">
                 <h1 class="display-4" style="margin: 2%; color: white;">Hey, I'm Rahul</h1>
                 <h6 style="margin: 2%; color: lightgray;">I design and develop beautifully simple things,<br> and I love
                     what I do.</h1>
             </div>
-            <button type="button" class="btn btn-outline-primary" style="margin: 2%;">Work with me!</button>
+
+            <!--Contact Button-->
+            <button type="button" class="btn btn-outline-primary" style="margin: 2%;">
+                Contact me
+                <i class="material-icons">chevron_right</i>
+            </button>
         </div>
 
 
