--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" type="text/css" href="styles/jet_brains_mono.css">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
@@ -42,19 +43,19 @@
             <div class="collapse navbar-collapse" id="navbarHam" style="margin-right: 4%;">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home <span></span></a>
+                        <a class="nav-link" href="#">HOME<span></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Skills</a>
+                        <a class="nav-link" href="#">SKILLS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Experience</a>
+                        <a class="nav-link" href="#">EXPERIENCE</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projects</a>
+                        <a class="nav-link" href="#">PROJECTS</a>
                     </li>
                 </ul>
             </div>
@@ -68,22 +69,32 @@
 
         <div class="container" style="margin-top: 15%;">
 
-            <!--Role Button-->
-            <button type="button" class="btn btn-success btn-sm" aria-pressed="true"style="margin-left: 2%;">
-                Software Developer
-            </button>
+
 
             <div class="row-align-item-start">
-                <h1 class="display-4" style="margin: 2%; color: white;">Hey, I'm Rahul</h1>
-                <h6 style="margin: 2%; color: lightgray;">I design and develop beautifully simple things,<br> and I love
+                <h1 class="display-4" style="margin: 2%; color: white; font-family: JetBrains Mono Bold;">Hey, I'm Rahul</h1>
+                <h6 style="margin: 2%; color: gray;">I design and develop beautifully simple things,<br> and I love
                     what I do.</h1>
             </div>
 
-            <!--Contact Button-->
-            <button type="button" class="btn btn-outline-primary" style="margin: 2%;">
-                Contact me
-                <i class="material-icons">chevron_right</i>
-            </button>
+            <div class="row-align-item-start" style="margin-left: -1.8%;">
+                <ol>
+                    <!--Contact Button-->
+                    <button type="button" class="btn btn-primary">
+                        Contact me
+                        <i class="material-icons">chevron_right</i>
+                    </button>
+
+                    <!--Contact Button-->
+                    <button type="button" class="btn btn-outline-primary" style="margin-left: 2%;">
+                        Resume
+                        <i class="material-icons">cloud_download</i>
+                    </button>
+
+                </ol>
+            </div>
+
+
         </div>
 
 
