--- a/index.html
+++ b/index.html
@@ -26,22 +26,24 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body style="background-color: #2D2E32;">
+<body">
 
     <section id="header">
 
         <!--This is the main navigation bar fixed at the top-->
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg fixed-top">
 
-            <a class="navbar-brand" href="#" style="color: white; margin-left: 4%;"><b>Rahul</b> Kumar Shah</a>
+            <a class="navbar-brand" href="#">
+                <img src="/res/drawables/logo.svg" width="75" height="75" alt="">
+            </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHam"
                 aria-controls="navbarHam" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarHam" style="margin-right: 4%;">
-                <ul class="navbar-nav ml-auto">
+            <div class="collapse navbar-collapse" id="navbarHam">
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#">HOME<span></span></a>
                     </li>
@@ -67,32 +69,28 @@
 
     <section id="intro">
 
-        <div class="container" style="margin-top: 15%;">
+        <div class="container" style="margin-top: 10%;">
 
 
+            <h1 class="display-4">Hey! <br>I'm Rahul, <br>Developer & <br>Designer_</h1>
 
-            <div class="row-align-item-start">
-                <h1 class="display-4" style="margin: 2%; color: white; font-family: JetBrains Mono Bold;">Hey, I'm Rahul</h1>
-                <h6 style="margin: 2%; color: gray;">I design and develop beautifully simple things,<br> and I love
-                    what I do.</h1>
-            </div>
-
-            <div class="row-align-item-start" style="margin-left: -1.8%;">
+           <!--
                 <ol>
-                    <!--Contact Button-->
+                <li>
                     <button type="button" class="btn btn-primary">
                         Contact me
                         <i class="material-icons">chevron_right</i>
                     </button>
+                </li>
 
-                    <!--Contact Button-->
+                <li>
                     <button type="button" class="btn btn-outline-primary" style="margin-left: 2%;">
                         Resume
                         <i class="material-icons">cloud_download</i>
                     </button>
-
-                </ol>
-            </div>
+                </li>
+            </ol>
+           -->
 
 
         </div>
