media queries optimized for smaller devices

--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
     <div class="home-content">
         <div class="header">
             <h1 class="home-content__headline">Hey! <br>I'm Rahul, <br>Developer & <br>Designer_</h1>
+            <!-- <button type="button" class="btn btn-primary" id="download_resume_button">
+                Resume
+            </button> -->
         </div>
         <div class="editor">
-            <div class="card text-white bg-dark">
+            <div class="card">
 
             </div>
         </div>
