--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rahul Kumar Shah</title>
 
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="styles/jet_brains_mono.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
@@ -45,19 +48,43 @@
         </div>
     </div>
 
-
-    <div class="home-content">
+    <div class="content-page" id="home">
         <div class="header">
             <h1 class="home-content__headline">Hey! <br>I'm Rahul, <br>Developer & <br>Designer_</h1>
-            <!-- <button type="button" class="btn btn-primary" id="download_resume_button">
+            <button type="button" class="btn btn-primary" id="download_resume_button">
                 Resume
-            </button> -->
+                <i class="fas fa-cloud-download-alt"></i>
+            </button>
         </div>
         <div class="editor">
             <div class="card">
 
             </div>
         </div>
+    </div>
+
+    <hr class="content-seperator">
+
+    <div class="content-page" id="experience">
+        <h1 class="content-header">Skills</h1>
+    </div>
+
+    <hr class="content-seperator">
+
+    <div class="content-page" id="experience">
+        <h1 class="content-header">Experience</h1>
+    </div>
+
+    <hr class="content-seperator">
+
+    <div class="content-page" id="experience">
+        <h1 class="content-header">Projects</h1>
+    </div>
+
+    <hr class="content-seperator">
+
+    <div class="content-page" id="experience">
+        <h1 class="content-header">About</h1>
     </div>
 
     <script src="script.js"></script>
