--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
@@ -30,12 +32,8 @@
 </head>
 
 <body>
-    <div class="menu-icon">
-        <span class="menu-icon__line menu-icon__line-left"></span>
-        <span class="menu-icon__line"></span>
-        <span class="menu-icon__line menu-icon__line-right"></span>
-    </div>
 
+    <!--Expendable Overlay Navbar Menu-->
     <div class="nav">
         <div class="nav__content">
             <ul class="nav__list">
@@ -48,13 +46,57 @@
         </div>
     </div>
 
+
+
+     <!--This is the main navigation bar fixed at the top-->
+     <nav class="navbar navbar-expand-lg fixed-top" id="horizontal_navbar">
+
+        <a class="navbar-brand" href="#">
+            <img src="/res/drawables/logo.svg" width="75" height="75" alt="">
+            <strong>Rahul </strong> Shah
+        </a>
+
+        <!--NavBar Menu Icon-->
+        <div class="menu-icon">
+            <span class="menu-icon__line menu-icon__line-left"></span>
+            <span class="menu-icon__line"></span>
+            <span class="menu-icon__line menu-icon__line-right"></span>
+        </div>
+        
+        <!--NavBar Horizontal Menu-->
+        <ul class="navbar-nav ml-auto" id="horizontal_nav_menu">
+            <li class="nav-item">
+                <a class="nav-link" href="#">HOME<span></span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">SKILLS</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">EXPERIENCE</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">PROJECTS</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">ABOUT</a>
+            </li>
+        </ul>
+
+    </nav>
+
+
     <div class="content-page" id="home">
         <div class="header">
             <h1 class="home-content__headline">Hey! <br>I'm Rahul, <br>Developer & <br>Designer_</h1>
-            <button type="button" class="btn btn-primary" id="download_resume_button">
-                Resume
-                <i class="fas fa-cloud-download-alt"></i>
-            </button>
+            <div>
+                <button type="button" class="btn btn-primary" id="download_resume_button">
+                    Resume
+                    <i class="fas fa-cloud-download-alt"></i>
+                </button>
+                <button type="button" class="btn btn-outline-success" id="download_resume_button">
+                    Projects
+                </button>
+            </div>
         </div>
         <div class="editor">
             <div class="card">
