--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -52,7 +53,7 @@
      <nav class="navbar navbar-expand-lg fixed-top" id="horizontal_navbar">
 
         <a class="navbar-brand" href="#">
-            <img src="/res/drawables/logo.svg" width="75" height="75" alt="">
+            <img src="res/drawables/logo.svg" width="75" height="75" alt="">
             <strong>Rahul </strong> Shah
         </a>
 
@@ -95,6 +96,7 @@
                 </button>
                 <button type="button" class="btn btn-outline-success" id="download_resume_button">
                     Projects
+                    <i class="fas fa-code"></i>
                 </button>
             </div>
         </div>
@@ -107,7 +109,7 @@
 
     <hr class="content-seperator">
 
-    <div class="content-page" id="experience">
+    <div class="content-page" id="skills">
         <h1 class="content-header">Skills</h1>
     </div>
 
@@ -115,17 +117,54 @@
 
     <div class="content-page" id="experience">
         <h1 class="content-header">Experience</h1>
+        <div class="exp_blocks">
+            <div class="exp_1">
+                <h1 class="year_of_experience">2O2O</h1>
+                <div style="position: absolute;">
+                    <div>
+                        <h1 class="exp_position" style="color: white; font-size: 5vmin;">Mobile Developer</h1>
+                        <h1 class="exp_position" style="color: white; font-size: 2vmin;">INCABLET MEDIA</h1>
+                    </div>
+                    <div>
+                        <h1 class="exp_position" style="color: white; font-size: 5vmin; margin-top: 2vmin;">OpenSource Contributer</h1>
+                        <h1 class="exp_position" style="color: white; font-size: 2vmin; font-weight: 100;">ANITAB.ORG</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="exp_2">
+                <h1 class="year_of_experience">2O19</h1>
+                <div style="position: absolute;">
+                    <div>
+                        <h1 class="exp_position" style="color: white; font-size: 5vmin;">Product Developer - Android</h1>
+                        <h1 class="exp_position" style="color: white; font-size: 2vmin; font-weight: 100;">FLOYDWIZ TECHNOLOGIES PRIVATE LIMITED</h1>
+                    </div>
+                    <div>
+                        <h1 class="exp_position" style="color: white; font-size: 5vmin; margin-top: 2vmin;">Freelance Android Developer</h1>
+                        <h1 class="exp_position" style="color: white; font-size: 2vmin; font-weight: 100;">EKLAVYA STUDY POINT</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="exp_3">
+                <h1 class="year_of_experience">2O18</h1>
+                <div style="position: absolute;">
+                    <div>
+                        <h1 class="exp_position" style="color: white; font-size: 5vmin;">Lead Android Developer</h1>
+                        <h1 class="exp_position" style="color: white; font-size: 2vmin; font-weight: 100;">DWARKAWALA</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <hr class="content-seperator">
 
-    <div class="content-page" id="experience">
+    <div class="content-page" id="projects">
         <h1 class="content-header">Projects</h1>
     </div>
 
     <hr class="content-seperator">
 
-    <div class="content-page" id="experience">
+    <div class="content-page" id="about">
         <h1 class="content-header">About</h1>
     </div>
 
