button animation added

--- a/index.html
+++ b/index.html
@@ -120,37 +120,37 @@
         <div class="exp_blocks">
             <div class="exp_1">
                 <h1 class="year_of_experience">2O2O</h1>
-                <div style="position: absolute;">
-                    <div>
-                        <h1 class="exp_position" style="color: white; font-size: 5vmin;">Mobile Developer</h1>
-                        <h1 class="exp_position" style="color: white; font-size: 2vmin;">INCABLET MEDIA</h1>
-                    </div>
-                    <div>
-                        <h1 class="exp_position" style="color: white; font-size: 5vmin; margin-top: 2vmin;">OpenSource Contributer</h1>
-                        <h1 class="exp_position" style="color: white; font-size: 2vmin; font-weight: 100;">ANITAB.ORG</h1>
-                    </div>
+                <div class="position_div" style="position: absolute;">
+                    <button class="pos_btn slide_right">
+                        Mobile Developer
+                        <span class="exp_company">INCABLET MEDIA</span>
+                    </button>
+                    <button class="pos_btn slide_right">
+                        OpenSource Contributer
+                        <span class="exp_company">ANITAB.ORG</span>
+                    </button>
                 </div>
             </div>
             <div class="exp_2">
                 <h1 class="year_of_experience">2O19</h1>
-                <div style="position: absolute;">
-                    <div>
-                        <h1 class="exp_position" style="color: white; font-size: 5vmin;">Product Developer - Android</h1>
-                        <h1 class="exp_position" style="color: white; font-size: 2vmin; font-weight: 100;">FLOYDWIZ TECHNOLOGIES PRIVATE LIMITED</h1>
-                    </div>
-                    <div>
-                        <h1 class="exp_position" style="color: white; font-size: 5vmin; margin-top: 2vmin;">Freelance Android Developer</h1>
-                        <h1 class="exp_position" style="color: white; font-size: 2vmin; font-weight: 100;">EKLAVYA STUDY POINT</h1>
-                    </div>
+                <div class="position_div" style="position: absolute;">
+                    <button class="pos_btn slide_right">
+                        Product Developer - Android
+                        <span class="exp_company">FLOYDWIZ TECHNOLOGIES PRIVATE LIMITED</span>
+                    </button>
+                    <button class="pos_btn slide_right">
+                        Freelance Android Developer
+                        <span class="exp_company">EKLAVYA STUDY POINT</span>
+                    </button>
                 </div>
             </div>
             <div class="exp_3">
                 <h1 class="year_of_experience">2O18</h1>
-                <div style="position: absolute;">
-                    <div>
-                        <h1 class="exp_position" style="color: white; font-size: 5vmin;">Lead Android Developer</h1>
-                        <h1 class="exp_position" style="color: white; font-size: 2vmin; font-weight: 100;">DWARKAWALA</h1>
-                    </div>
+                <div class="position_div" style="position: absolute;">
+                    <button class="pos_btn slide_right">
+                        Lead Android Developer
+                        <span class="exp_company">DWARKAWALA</span>
+                    </button>
                 </div>
             </div>
         </div>
