--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
      <nav class="navbar navbar-expand-lg fixed-top" id="horizontal_navbar">
 
         <a class="navbar-brand" href="#">
-            <img src="res/drawables/logo.svg" width="75" height="75" alt="">
+            <img src="res/drawables/logo.svg" alt="" id="brand_image">
             <strong>Rahul </strong> Shah
         </a>
 
@@ -87,23 +87,25 @@
 
 
     <div class="content-page" id="home">
-        <div class="header">
-            <h1 class="home-content__headline">Hey! <br>I'm Rahul, <br>Developer & <br>Designer_</h1>
-            <div>
-                <button type="button" class="btn btn-primary" id="download_resume_button">
-                    Resume
-                    <i class="fas fa-cloud-download-alt"></i>
+        <div class="container_home">
+            <div class="container_header">
+                <h1 class="home-content__headline">Hey! <br>I'm Rahul, <br>Developer & <br>Designer_</h1>
+                <button class="pos_btn slide_right" id="download_resume_button">
+                    VIEW PROJECTS
                 </button>
-                <button type="button" class="btn btn-outline-success" id="download_resume_button">
-                    Projects
-                    <i class="fas fa-code"></i>
-                </button>
+            </div>
+            <div class="container_editor">
+                <div class="card_editor">
+                    <div class="editor_top">
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="editor">
-            <div class="card">
-
-            </div>
+        <div>
+            <!--TODO-->
         </div>
     </div>
 
