skills boxes added

--- a/index.html
+++ b/index.html
@@ -134,12 +134,21 @@
                 </div>
             </div>
         </section>
+        <div class="skills__container">
+            <div class="lang__container">
+
+            </div>
+            <div class="lang__container">
+
+            </div>
+            <div class="lang__container">
+
+            </div>
+        </div>
 
 
     
     </div>
-
-<!-- <span class="page__header-foreground">Skills&nbsp;&nbsp;</span> -->
 
     <hr class="content-seperator">
 
