Spline Background Added

--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
         </a>
     </nav>
 
+    <iframe style="position: absolute;"  width="100%" height="92%" src='https://my.spline.design/darkbackground-ae292ec8d8f1fe2153978179673f8e07/' frameborder='0'></iframe>
 
     <!--Home Page-->
     <div class="content__page" id="home">
+        
         <div class="container__home">
 
             <!--Main Intro Block-->
@@ -328,7 +330,7 @@
                     <h4 class="light color-dark">Mobile Developer</h4>
                     <p class="bold color-primary">INCABLET MEDIA</p>
                 </div>
-                <div class="exp__card-body">
+                <div class="exp__card-body bg-white-light">
                     <p class="color-dark-light">Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim
                         ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
                         iusto primis ea eam.
@@ -336,7 +338,7 @@
                 </div>
                 <div class="exp__card-footer bg-white-light">
                     <h6 class="extra-bold">2020</h6>
-                    <i class="material-icons">expand_more</i>
+                    <i class="material-icons md-18">expand_more</i>
                 </div>
             </div>
             <div class="exp__card">
@@ -344,7 +346,7 @@
                     <h4 class="light color-dark">OpenSource Contributer</h4>
                     <p class="bold color-primary">ANITAB.ORG</p>
                 </div>
-                <div class="exp__card-body">
+                <div class="exp__card-body bg-white-light">
                     <p class="color-dark-light">Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim
                         ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
                         iusto primis ea eam.
@@ -352,7 +354,7 @@
                 </div>
                 <div class="exp__card-footer bg-white-light">
                     <h6 class="extra-bold">2020</h6>
-                    <i class="material-icons">expand_more</i>
+                    <i class="material-icons md-18">expand_more</i>
                 </div>
             </div>
             <div class="exp__card">
@@ -360,7 +362,7 @@
                     <h4 class="light color-dark">Product Developer: Android</h4>
                     <p class="bold color-primary">FLOYDWIZ TECHNOLOGIES</p>
                 </div>
-                <div class="exp__card-body">
+                <div class="exp__card-body bg-white-light">
                     <p class="color-dark-light">Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim
                         ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
                         iusto primis ea eam.
@@ -368,7 +370,7 @@
                 </div>
                 <div class="exp__card-footer bg-white-light">
                     <h6 class="extra-bold">2019</h6>
-                    <i class="material-icons">expand_more</i>
+                    <i class="material-icons md-18">expand_more</i>
                 </div>
             </div>
             <div class="exp__card">
@@ -376,7 +378,7 @@
                     <h4 class="light color-dark">Freelance Android Developer</h4>
                     <p class="bold color-primary">EKLAVYA STUDY POINT</p>
                 </div>
-                <div class="exp__card-body">
+                <div class="exp__card-body bg-white-light">
                     <p class="color-dark-light">Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim
                         ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
                         iusto primis ea eam.
@@ -384,7 +386,7 @@
                 </div>
                 <div class="exp__card-footer bg-white-light">
                     <h6 class="extra-bold">2019</h6>
-                    <i class="material-icons">expand_more</i>
+                    <i class="material-icons md-18">expand_more</i>
                 </div>
             </div>
             <div class="exp__card">
@@ -392,7 +394,7 @@
                     <h4 class="light color-dark">Lead Android Developer</h4>
                     <p class="bold color-primary">DWARKAWALA</p>
                 </div>
-                <div class="exp__card-body">
+                <div class="exp__card-body bg-white-light">
                     <p class="color-dark-light">Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim
                         ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
                         iusto primis ea eam.
@@ -400,7 +402,7 @@
                 </div>
                 <div class="exp__card-footer bg-white-light">
                     <h6 class="extra-bold">2018</h6>
-                    <i class="material-icons">expand_more</i>
+                    <i class="material-icons md-18">expand_more</i>
                 </div>
             </div>
         </div>
