--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
   </head>
 
   <body>
+
+    <div class="cursor"></div>
+
     <!--Desktop Navbar-->
-    <nav
-      class="navbar fixed-top navbar-expand-lg navbar-dark"
-      id="navbar__desktop"
-    >
+    <nav class="navbar fixed-top navbar-expand-lg "id="navbar__desktop">
       <a class="navbar-brand" href="#">
         <!-- <img src="res/drawables/logo_dark.svg" class="d-inline-block align-center" 
                         alt="" id="brand_image"> -->
@@ -108,8 +108,8 @@
 
     <!-- <iframe style="position: absolute;"  width="100%" height="92%" 
         src='https://my.spline.design/darkbackground-ae292ec8d8f1fe2153978179673f8e07/' 
-        frameborder='0'> -->
-    </iframe>
+        frameborder='0'>
+    </iframe> -->
 
     <!--Home Page-->
     <div class="content__page" id="home">
@@ -127,10 +127,10 @@
 
         <!--Phone Block only for desktop devices-->
         <div class="block__phone">
-          <img src="./res/drawables/mobile_frame_white.svg" />
-          <!-- <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_4ayeqfsd.json"  
-                    background="transparent"  
-               speed="1"  loop controls autoplay></lottie-player> -->
+          <div class="block__phone-mockup">
+            <img src="./res/drawables/tablet_frame_black.svg" alt="empty phone mockup" class="mockup_frame">
+            <img src="./res/drawables/resume.svg" alt="empty phone mockup" class="resume">
+          </div>
         </div>
       </div>
     </div>
