experience cards animation optimized

--- a/index.html
+++ b/index.html
@@ -321,12 +321,12 @@
       </section>
       <div class="timeline__container">
         <!------------------------------------------------------------>
-        <div class="exp__card">
+        <div class="exp-card">
           <div class="exp__card-header bg-dark-light">
             <h4 class="light color-white">Mobile Developer</h4>
             <p class="bold color-primary">INCABLET MEDIA</p>
           </div>
-          <div class="exp__card-body bg-dark">
+          <div class="hover_content bg-dark">
             <p class="color-white-light">
               Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
               admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
@@ -340,12 +340,12 @@
           </div>
         </div>
         <!------------------------------------------------------------>
-        <div class="exp__card">
+        <div class="exp-card">
           <div class="exp__card-header bg-dark-light">
             <h4 class="light color-white">OpenSource Contributer</h4>
             <p class="bold color-primary">ANITAB.ORG</p>
           </div>
-          <div class="exp__card-body bg-dark">
+          <div class="hover_content bg-dark">
             <p class="color-white-light">
               Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
               admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
@@ -359,12 +359,12 @@
           </div>
         </div>
         <!------------------------------------------------------------>
-        <div class="exp__card">
+        <div class="exp-card">
           <div class="exp__card-header bg-dark-light">
             <h4 class="light color-white">Product Developer: Android</h4>
             <p class="bold color-primary">FLOYDWIZ TECHNOLOGIES</p>
           </div>
-          <div class="exp__card-body bg-dark">
+          <div class="hover_content bg-dark">
             <p class="color-white-light">
               Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
               admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
@@ -378,12 +378,12 @@
           </div>
         </div>
         <!------------------------------------------------------------>
-        <div class="exp__card">
+        <div class="exp-card">
           <div class="exp__card-header bg-dark-light">
             <h4 class="light color-white">Freelance Android Developer</h4>
             <p class="bold color-primary">EKLAVYA STUDY POINT</p>
           </div>
-          <div class="exp__card-body bg-dark">
+          <div class="hover_content bg-dark">
             <p class="color-white-light">
               Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
               admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
@@ -397,12 +397,12 @@
           </div>
         </div>
         <!------------------------------------------------------------>
-        <div class="exp__card">
+        <div class="exp-card">
           <div class="exp__card-header bg-dark-light">
             <h4 class="light color-white">Lead Android Developer</h4>
             <p class="bold color-primary">DWARKAWALA</p>
           </div>
-          <div class="exp__card-body bg-dark">
+          <div class="hover_content bg-dark">
             <p class="color-white-light">
               Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
               admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
