--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rahul Kumar Shah</title>
 
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" type="text/css" href="styles/jet_brains_mono.css" />
     <link rel="stylesheet" href="res/fonts/stylesheet.css" />
     <link
@@ -45,62 +40,57 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
-    <script src="./node_modules/typedJS/typed.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+    <script src="./node_modules/typedJS/typed.js"></script> -->
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
   </head>
 
   <body>
 
-    <div class="cursor"></div>
-
     <!--Desktop Navbar-->
-    <nav class="navbar fixed-top navbar-expand-lg "id="navbar__desktop">
-      <a class="navbar-brand" href="#">
-        <!-- <img src="res/drawables/logo_dark.svg" class="d-inline-block align-center" 
-                        alt="" id="brand_image"> -->
-        <span class="bold color-white"> Rahul </span>
-        <span class="light color-white"> Kumar Shah </span>
-      </a>
-      <div class="collapse navbar-collapse" id="navbarToggler">
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0" id="horizontal_nav_menu">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <ul class="nav__desktop">
+      <li>
+        <a href="#home"><i class="material-icons md-18 nav__icon">home</i></a>
+        <div class="animated slideInLeft">HOME</div>
+      </li>
+      <li>
+        <a href="#skills"><i class="material-icons md-18 nav__icon">code</i></a>
+        <div class="animated slideInLeft">SKILLS</div>
+      </li>
+      <li>
+        <a href="#experience"><i class="material-icons md-18 nav__icon">work</i></a>
+        <div class="animated slideInLeft">EXPERIENCE</div>
+      </li>
+      <li>
+        <a href="#projects"><i class="material-icons md-18 nav__icon">dashboard</i></a>
+        <div class="animated slideInLeft">PROJECTS</div>
+      </li>
+      <li>
+        <a href="#about"><i class="material-icons md-18 nav__icon">person</i></a>
+        <div class="animated slideInLeft">ABOUT</div>
+      </li>
+    </ul>
 
     <!--Mobile Navbar-->
     <nav class="nav__mobile">
-      <a href="#" class="nav__link nav__link--active">
+      <a href="#home" class="nav__link nav__link--active">
         <i class="material-icons md-24 nav__icon">home</i>
         <span class="nav__text">Home</span>
       </a>
-      <a href="#" class="nav__link">
+      <a href="#skills" class="nav__link">
         <i class="material-icons md-24 nav__icon">code</i>
         <span class="nav__text">Skills</span>
       </a>
-      <a href="#" class="nav__link">
+      <a href="#experience" class="nav__link">
         <i class="material-icons md-24 nav__icon">work</i>
         <span class="nav__text">Experience</span>
       </a>
-      <a href="#" class="nav__link">
+      <a href="#projects" class="nav__link">
         <i class="material-icons md-24 nav__icon">dashboard</i>
         <span class="nav__text">Projects</span>
       </a>
-      <a href="#" class="nav__link">
+      <a href="#about" class="nav__link">
         <i class="material-icons md-24 nav__icon">person</i>
         <span class="nav__text">About</span>
       </a>
@@ -111,33 +101,36 @@
         frameborder='0'>
     </iframe> -->
 
-    <!--Home Page-->
+    <!--HOME PAGE-->
     <div class="content__page" id="home">
       <div class="container__home">
         <!--Main Intro Block-->
         <div class="block__header">
-          <h1 class="block__header-headline bold">
-            <span id="introduction"> </span>
-          </h1>
-          <div class="block__header-info">
-            <p>Software Developer and Designer based in India</p>
-          </div>
-          <button class="block__header-button">VIEW PROJECTS</button>
+          <h4>
+            <span>THIS IS </span>
+            <span class="extra-bold">RAHUL </span>
+            <span>KUMAR SHAH</span>
+          </h4>
+          <h6>
+            <span class="light">SOFTWARE DEVELOPER</span>
+          </h6>
+          <img src="./res/drawables/hello.svg" alt="Hello Message">
         </div>
 
-        <!--Phone Block only for desktop devices-->
         <div class="block__phone">
-          <div class="block__phone-mockup">
-            <img src="./res/drawables/tablet_frame_black.svg" alt="empty phone mockup" class="mockup_frame">
-            <img src="./res/drawables/resume.svg" alt="empty phone mockup" class="resume">
-          </div>
+          <img src="./res/drawables/mobile_frame_white.svg" alt="Device Frame">
         </div>
       </div>
     </div>
 
+
+
+    <!-- SEPERATOR BOUNDARY -->
     <hr class="content-seperator" />
 
-    <!--Skills Page-->
+
+
+    <!--SKILLS PAGE-->
     <div class="content__page" id="skills">
       <section class="page__header">
         <div class="page__header-background">
@@ -536,12 +529,11 @@
       </section>
       <div class="container__about">
         <div class="block__info">
-          <h1
+          <h2
             class="color-primary bold"
-            style="border-radius: 1vmin; text-align: start"
-          >
+            style="border-radius: 1vmin; text-align: start">
             Rahul Kumar Shah
-          </h1>
+          </h2>
           <hr class="horizontal-seperator" />
           <ul class="social__buttons">
             <li>
