--- a/index.html
+++ b/index.html
@@ -52,23 +52,23 @@
     <ul class="nav__desktop">
       <li>
         <a href="#home"><i class="material-icons md-18 nav__icon">home</i></a>
-        <div class="animated slideInLeft">HOME</div>
+        <div>HOME</div>
       </li>
       <li>
         <a href="#skills"><i class="material-icons md-18 nav__icon">code</i></a>
-        <div class="animated slideInLeft">SKILLS</div>
+        <div>SKILLS</div>
       </li>
       <li>
         <a href="#experience"><i class="material-icons md-18 nav__icon">work</i></a>
-        <div class="animated slideInLeft">EXPERIENCE</div>
+        <div>EXPERIENCE</div>
       </li>
       <li>
         <a href="#projects"><i class="material-icons md-18 nav__icon">dashboard</i></a>
-        <div class="animated slideInLeft">PROJECTS</div>
+        <div>PROJECTS</div>
       </li>
       <li>
         <a href="#about"><i class="material-icons md-18 nav__icon">person</i></a>
-        <div class="animated slideInLeft">ABOUT</div>
+        <div>ABOUT</div>
       </li>
     </ul>
 
@@ -313,15 +313,14 @@
         <div class="exp-card">
           <div class="exp__card-header bg-dark-light">
             <h4 class="light color-white">Mobile Developer</h4>
-            <p class="bold color-primary">INCABLET MEDIA</p>
+            <p class="bold color-primary">INCABLET MEDIA &nbsp;| &nbsp;INTERNSHIP</p>
           </div>
           <div class="hover_content bg-dark">
-            <p class="color-white-light">
-              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-              quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
-              iusto primis ea eam.
-            </p>
+            <ul class="exp__card-desc">
+              <li>Design, build and maintained high performance, reusable and reliable native code for <span class="bold">SmartSevak and Inn91</span> with more than 50% performance improvements.</li>
+              <li>Used Scrum Agile Methodology and issue tracking via JIRA and Gitlab.</li>
+              <li>Tech Stack: Jetpack Components , RxJava3, Dagger2, Postman, AWS Gateway, Flutter and MVVM architecture.</li>
+            </ul>
           </div>
           <div class="exp__card-footer bg-dark">
             <h6 class="extra-bold">2020</h6>
@@ -332,15 +331,14 @@
         <div class="exp-card">
           <div class="exp__card-header bg-dark-light">
             <h4 class="light color-white">OpenSource Contributer</h4>
-            <p class="bold color-primary">ANITAB.ORG</p>
+            <p class="bold color-primary">ANITAB.ORG &nbsp;| &nbsp;OPENSOURCE</p>
           </div>
           <div class="hover_content bg-dark">
-            <p class="color-white-light">
-              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-              quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
-              iusto primis ea eam.
-            </p>
+            <ul class="exp__card-desc">
+              <li>Contributed to the <span class="bold">Mentorship</span> Android project and worked on the improvements and enhancements.</li>
+              <li>Connected with Zulip community and collaborated on weekly open sessions/scrums as a part of Design and Dev Team.</li>
+              <li>Tech Stack: Jetpack Components , Coroutines, Postman, Swagger.io, REST API and MVVM architecture.</li>
+            </ul>
           </div>
           <div class="exp__card-footer bg-dark">
             <h6 class="extra-bold">2020</h6>
@@ -351,15 +349,15 @@
         <div class="exp-card">
           <div class="exp__card-header bg-dark-light">
             <h4 class="light color-white">Product Developer: Android</h4>
-            <p class="bold color-primary">FLOYDWIZ TECHNOLOGIES</p>
+            <p class="bold color-primary">FLOYDWIZ TECHNOLOGIES &nbsp;| &nbsp;INTERNSHIP</p>
           </div>
           <div class="hover_content bg-dark">
-            <p class="color-white-light">
-              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-              quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
-              iusto primis ea eam.
-            </p>
+            <ul class="exp__card-desc">
+              <li>Designed and developed <span class="bold">PikaGames and PikaBrowser</span> as a module for the Parental Control App with 360 degree online kids safety.</li>
+              <li>Created custom WebView for age-appropriate browsing and learning purposes with parental remote monitoring.</li>
+              <li>Integrated 100+ HTML5 Games with increased support for multiple devices.</li>
+              <li>Tech Stack: AWS Database, Room, Retrofit, Dagger and MVP architecture.</li>
+            </ul>
           </div>
           <div class="exp__card-footer bg-dark">
             <h6 class="extra-bold">2019</h6>
@@ -370,15 +368,14 @@
         <div class="exp-card">
           <div class="exp__card-header bg-dark-light">
             <h4 class="light color-white">Freelance Android Developer</h4>
-            <p class="bold color-primary">EKLAVYA STUDY POINT</p>
+            <p class="bold color-primary">EKLAVYA STUDY POINT &nbsp;| &nbsp;FREELANCE</p>
           </div>
           <div class="hover_content bg-dark">
-            <p class="color-white-light">
-              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-              quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
-              iusto primis ea eam.
-            </p>
+            <ul class="exp__card-desc">
+              <li>Designed and developed <span class="bold">Eklavya Study</span> Android App that provides useful videos and handwritten notes to study in a better manner for free.</li>
+              <li>Features like phone auth, download & Upload of notes, Quizzes and puzzles added.</li>
+              <li>Tech Stack: Firebase, RxJava2, SQLite, Retrofit, Material Design and YT Data API.</li>
+            </ul>
           </div>
           <div class="exp__card-footer bg-dark">
             <h6 class="extra-bold">2019</h6>
@@ -389,15 +386,14 @@
         <div class="exp-card">
           <div class="exp__card-header bg-dark-light">
             <h4 class="light color-white">Lead Android Developer</h4>
-            <p class="bold color-primary">DWARKAWALA</p>
+            <p class="bold color-primary">DWARKAWALA &nbsp;| &nbsp;INTERNSHIP</p>
           </div>
           <div class="hover_content bg-dark">
-            <p class="color-white-light">
-              Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-              admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-              quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
-              iusto primis ea eam.
-            </p>
+            <ul class="exp__card-desc">
+              <li>Developed <span class="bold">Dwarkawala</span> app through which users can explore the curated lists of best restaurants, bars, cafes nearby and grab easy discounts & offers.</li>
+              <li>Integrated news feed from Dwarkawala Website via Rest API and separate logins for customers and merchants.</li>
+              <li>Tech Stack: Firebase, Retrofit, WordPress APIs and MVC architecture.</li>
+            </ul>
           </div>
           <div class="exp__card-footer bg-dark">
             <h6 class="extra-bold">2018</h6>
@@ -679,7 +675,5 @@
     </footer>
 
     <script src="script.js"></script>
-    <script src="./automation.js"></script>
-    <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> -->
   </body>
 </html>
