skills italic removed

--- a/index.html
+++ b/index.html
@@ -240,56 +240,59 @@
           </div>
           <div class="rect__container">
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">Jetpack</p>
+              <p class="color-white">Jetpack</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">Retrofit</p>
+              <p class="color-white">Dagger2</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">RxJava</p>
+              <p class="color-white">Retrofit</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">Flask</p>
+              <p class="color-white">RxJava</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">Firebase</p>
+              <p class="color-white">Flask</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">GCP</p>
+              <p class="color-white">Firebase</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">AWS</p>
+              <p class="color-white">GCP</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">MVVM</p>
+              <p class="color-white">AWS</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">Tensorflow</p>
+              <p class="color-white">MVVM</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">MVP/MVC</p>
+              <p class="color-white">OpenGL</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">Heroku</p>
+              <p class="color-white">MVP/MVC</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">ExpressJS</p>
+              <p class="color-white">Heroku</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">Swagger.io</p>
+              <p class="color-white">ExpressJS</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">MongoDB</p>
+              <p class="color-white">Swagger.io</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">JQuery</p>
+              <p class="color-white">MongoDB</p>
             </div>
             <div class="skills_box_rect bg-dark">
-              <p class="color-white italic">NodeJS</p>
+              <p class="color-white">JQuery</p>
+            </div>
+            <div class="skills_box_rect bg-dark">
+              <p class="color-white">NodeJS</p>
             </div>
             <div class="skills_box_rect bg-dark">
               <a title="worked while working on android platform"></a>
-              <p class="color-white italic">SQlite</p>
+              <p class="color-white">SQlite</p>
             </div>
           </div>
         </div>
